Fix for linear gradient transparency on iOS safari

--- a/main.css
+++ b/main.css
@@ -64,7 +64,7 @@ main {
 	position: -o-sticky;
 	position: sticky;
 	top:0;
-	background: linear-gradient(to bottom, #fff 0%, #fff 80%, transparent);
+	background: linear-gradient(to bottom, #fff 0%, #fff 80%, rgba(255,255,255,0));
 	z-index: 1;
 }
 #gameFeed .game {
